shell: fix minor CSS alignment of shell search menu independant to themes

--- a/pkg/shell/nav.scss
+++ b/pkg/shell/nav.scss
@@ -389,13 +389,14 @@ $desktop: $phone + 1px;
 
 .pf-theme-dark {
   .pf-c-select__toggle {
-    //mobile
-    height: 100%;
-
     > * {
       color: var(--pf-global--Color--light-100);
     }
   }
+}
+
+.pf-c-select__toggle {
+  height: 100%;
 }
 
 .nav-action {
